<resources>
    <string name="app_name">POKEDEX</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon_dummy_name">Bulbasaur</string>
    <string name="dummy_pokemon_name">Pikachu</string>
    <string name="dummy_pokemon_height">Height</string>
    <string name="dummy_pokemon_weight">Weight</string>
    <string name="dummy_pokemon_type">Type</string>
    <string name="dummy_pokemon_weakness">Weakness</string>
    <string name="dummy_pokemon_evolution">Prev Evolution</string>
    <string name="dummy_pokemon_next_evolution">Next Evolution</string>
    <string name="poke_image_content_description">Pokemon Image</string>
    <string name="pokemon_dummy_number">#001</string>
</resources>
